--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </div>
       </div>
     </div>
-    <main class="flex-grow-1">
+    <main class="flex-grow-1" id="point">
       <section class="container-fluid bg-dark p-5">
         <div class="row">
           <div class="col-md-10 col-lg-8 mx-auto text-white">
