--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </div>
       </div>
     </div>
-    <main class="flex-grow-1" id="point">
+    <main class="flex-grow-1">
       <section class="container-fluid bg-dark p-5">
         <div class="row">
           <div class="col-md-10 col-lg-8 mx-auto text-white">
@@ -48,7 +48,7 @@
           </div>
         </div>
       </section>
-      <section class="container-fluid container-xxl p-5">
+      <section class="container-fluid container-xxl p-5" id="point">
         <div class="row">
           <div class="col-md-10 col-lg-8 order-1 mx-auto posts"></div>
           <div class="col-md-10 col-lg-4 mx-auto order-0 order-lg-1 feeds"></div>
