--- a/index.html
+++ b/index.html
@@ -64,5 +64,6 @@
       </div>
       </div>
     </footer>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap/dist/js/bootstrap.bundle.min.js"></script>  
   </body>
 </html>
