--- a/index.html
+++ b/index.html
@@ -64,6 +64,8 @@
       </div>
       </div>
     </footer>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ENjdO4Dr2bkBIFxQpeo1khFpcC3r5SkL+L+U6bRm2PmM1iM1XLM1/tW1Qvi5Q2Vb"
+        crossorigin="anonymous"></script>
   </body>
 </html>
