--- a/index.html
+++ b/index.html
@@ -64,6 +64,9 @@
       </div>
       </div>
     </footer>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-u1O/V5rVfQG6XqRwxkXkYQjUzrN2DKTGRn35ONWBg2hj42lFjwZY6qQ1f6do5v6z"
+        crossorigin="anonymous"></script>
+
   </body>
 </html>
